force-app/main/default/objects/Activation__c/Activation__c.object-meta.xml
<CustomObject>
    <label>Activation</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Activation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>