force-app/main/default/objects/Activation__c/fields/Cycle_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Protocol__c</fullName>
    <label>Cycle Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Down Reg</fullName>
            </value>
            <value>
                <fullName>Boost</fullName>
            </value>
            <value>
                <fullName>Antagonist</fullName>
            </value>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>HRT</fullName>
            </value>
            <value>
                <fullName>FSH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>