force-app/main/default/objects/Activation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>A text field for the treating Doctor to enter notes on the activation request.</description>
    <label>Activation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>