force-app/main/default/objects/Activation__c/fields/Patients_Donors_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Patients_Donors_Lookup__c</fullName>
    <label>Related Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activations</relationshipLabel>
    <relationshipName>Activations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>